--- a/.gitignore
+++ b/.gitignore
@@ -89,7 +89,7 @@ ENV/
 .ropeproject
 personalwebsite/frontend/node_modules/
 personalwebsite/frontend/bundles/
-personalwebwite/frontend/assets/bundles/*
+personalwebwite/frontend/assets/bundles/**
 static/
 
 *.swp
