--- a/.gitignore
+++ b/.gitignore
@@ -87,10 +87,11 @@ ENV/
 
 # Rope project settings
 .ropeproject
-personalwebsite/frontend/node_modules
-personalwebsite/frontend/bundles
-personalwebwite/frontend/assets/bundles
+personalwebsite/frontend/node_modules/
+personalwebsite/frontend/bundles/
+personalwebwite/frontend/assets/bundles/
 static/
+personalwebsite/frontend/webpack-stats.json
 
 *.swp
 *.swo
