set up hot reload for scss, html

--- a/personalwebsite/frontend/package.json
+++ b/personalwebsite/frontend/package.json
@@ -22,9 +22,12 @@
     "font-awesome": "^4.6.3",
     "font-awesome-webpack": "0.0.4",
     "foundation-cli": "^2.1.0",
+    "html-loader": "^0.4.4",
+    "html-webpack-plugin": "^2.26.0",
     "json-loader": "^0.5.4",
     "materialize-css": "^0.97.7",
     "node-sass": "^3.13.1",
+    "raw-loader": "^0.5.1",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "react-hot-loader": "^3.0.0-beta.6",
